--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "ember-qunit": "^6.2.0",
     "ember-resolver": "^10.0.0",
     "ember-resources": "^6.3.1",
+    "ember-simple-auth": "^6.0.0",
     "ember-source": "~4.12.0",
     "ember-template-lint": "^5.7.2",
     "ember-test-selectors": "^6.0.0",
