--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint:hbs:fix": "ember-template-lint . --fix",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
-    "dev": "ember serve --environment=development",
+    "dev": "ember serve --environment=development --proxy=https://dm.dennisve-dev-2.s.redhost.be/ --secure-proxy=false",
     "dev:proxy": "ember serve --environment=development --proxy=https://dev.lokaalbeslist.lblod.info/",
     "qa:proxy": "ember serve --environment=development --proxy=https://lokaalbeslist.lblod.info/",
     "start": "ember serve --environment=development",
@@ -32,6 +32,10 @@
     "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
     "test:ember": "ember test",
     "release": "release-it"
+  },
+  "dependencies": {
+    "@glimmer/component": "^1.1.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@appuniversum/ember-appuniversum": "^2.18.0",
@@ -42,9 +46,7 @@
     "@embroider/core": "^3.2.0",
     "@embroider/router": "^2.1.3",
     "@embroider/webpack": "^3.1.4",
-    "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
-    "@lblod/ember-mock-login": "^0.10.0",
     "@release-it-plugins/lerna-changelog": "^6.0.0",
     "@tsconfig/ember": "^2.0.0",
     "@types/ember": "^4.0.3",
@@ -76,6 +78,7 @@
     "@types/node": "^18.14.5",
     "@types/qunit": "^2.19.4",
     "@types/rsvp": "^4.0.4",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "broccoli-asset-rev": "^3.0.0",
