--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@appuniversum/ember-appuniversum": "^2.18.0",
+    "@appuniversum/ember-appuniversum": "^3.4.1",
     "@ember/optional-features": "^2.0.0",
     "@ember/string": "^3.0.1",
     "@ember/test-helpers": "^2.9.3",
@@ -96,6 +96,7 @@
     "ember-cli-typescript": "^5.2.1",
     "ember-concurrency": "^3.1.0",
     "ember-data": "~4.12.2",
+    "ember-data-table": "^2.1.0",
     "ember-focus-trap": "^1.0.2",
     "ember-load-initializers": "^2.1.2",
     "ember-modifier": "^4.1.0",
