--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,14 @@
 {
   "extends": "@tsconfig/ember/tsconfig.json",
   "compilerOptions": {
-
     // The combination of `baseUrl` with `paths` allows Ember's classic package
     // layout, which is not resolvable with the Node resolution algorithm, to
     // work with TypeScript.
     "baseUrl": ".",
     "paths": {
-      "frontend-data-monitoring/tests/*": [
-        "tests/*"
-      ],
-      "frontend-data-monitoring/*": [
-        "app/*"
-      ],
-      "*": [
-        "types/*"
-      ]
+      "frontend-data-monitoring/tests/*": ["tests/*"],
+      "frontend-data-monitoring/*": ["app/*"],
+      "*": ["types/*"]
     }
   },
   "include": [
