--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@glimmer/component": "^1.1.2",
+    "@lblod/ember-acmidm-login": "^2.1.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -47,6 +48,7 @@
     "@embroider/router": "^2.1.3",
     "@embroider/webpack": "^3.1.4",
     "@glimmer/tracking": "^1.1.2",
+    "@lblod/ember-mock-login": "^0.10.0",
     "@release-it-plugins/lerna-changelog": "^6.0.0",
     "@tsconfig/ember": "^2.0.0",
     "@types/ember": "^4.0.3",
@@ -132,8 +134,7 @@
     "tracked-toolbox": "^2.0.0",
     "typescript": "^5.0.4",
     "webpack": "^5.78.0",
-    "webpack-bundle-analyzer": "^4.9.0",
-    "@lblod/ember-mock-login": "^0.10.0"
+    "webpack-bundle-analyzer": "^4.9.0"
   },
   "engines": {
     "node": "14.* || 16.* || >= 18"
