--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@appuniversum/ember-appuniversum": "^3.4.1",
+    "@appuniversum/ember-appuniversum": "^3.6.0",
     "@ember/optional-features": "^2.0.0",
     "@ember/string": "^3.0.1",
     "@ember/test-helpers": "^2.9.3",
@@ -87,10 +87,10 @@
     "concurrently": "^8.0.1",
     "date-fns": "^2.29.3",
     "ember-auto-import": "^2.6.3",
-    "ember-cli": "~4.12.1",
+    "ember-cli": "~5.11.0",
     "ember-cli-app-version": "^6.0.0",
     "ember-cli-autoprefixer": "^2.0.0",
-    "ember-cli-babel": "^7.26.11",
+    "ember-cli-babel": "^8.2.0",
     "ember-cli-dependency-checker": "^3.3.1",
     "ember-cli-htmlbars": "^6.2.0",
     "ember-cli-inject-live-reload": "^2.1.0",
@@ -112,9 +112,10 @@
     "ember-template-lint": "^5.7.2",
     "ember-test-selectors": "^6.0.0",
     "ember-truth-helpers": "^4.0.3",
-    "eslint": "^8.37.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-ember": "^11.5.0",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-qunit": "^7.3.4",
