Refactor CI configuration to use woodpeckerci/plugin-docker-buildx and unify image versions across pipelines

--- a/.woodpecker/.tag.yml
+++ b/.woodpecker/.tag.yml
@@ -1,10 +1,18 @@
-pipeline:
-  build:
+steps:
+  install:
+    image: madnificent/ember:4.12.1-node_18
+    commands:
+      - npm ci
+  release:
     image: plugins/docker
     settings:
       repo: ${CI_REPO}
       tags: "${CI_COMMIT_TAG##v}"
-    secrets: [docker_username, docker_password]
+      purge: true
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
 when:
-  event: tag
-  tag: v*
+  - event: tag
+    ref: refs/tags/v*
