--- a/package.json
+++ b/package.json
@@ -34,9 +34,6 @@
     "release": "release-it"
   },
   "devDependencies": {
-    "@glimmer/component": "^1.1.2",
-    "@lblod/ember-acmidm-login": "^2.1.0",
-    "uuid": "^10.0.0",
     "@appuniversum/ember-appuniversum": "^3.6.0",
     "@ember/optional-features": "^2.0.0",
     "@ember/string": "^3.0.1",
@@ -45,8 +42,11 @@
     "@embroider/core": "^3.2.0",
     "@embroider/router": "^2.1.3",
     "@embroider/webpack": "^3.1.4",
+    "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
+    "@lblod/ember-acmidm-login": "^2.1.0",
     "@lblod/ember-mock-login": "^0.10.0",
+    "@lblod/lib-decision-validation": "^1.0.51",
     "@release-it-plugins/lerna-changelog": "^6.0.0",
     "@tsconfig/ember": "^2.0.0",
     "@types/ember": "^4.0.3",
@@ -132,9 +132,10 @@
     "tracked-built-ins": "^3.3.0",
     "tracked-toolbox": "^2.0.0",
     "typescript": "^5.6.2",
+    "uuid": "^10.0.0",
     "webpack": "^5.94.0",
     "webpack-bundle-analyzer": "^4.10.2",
-    "@lblod/lib-decision-validation": "^1.0.51"
+    "ember-tooltips": "^4.0.0"
   },
   "engines": {
     "node": "16.* || >= 18"
