Add Playwright testing framework and implement initial tests for org-report route functionality

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@ dist
 *.sparqlbook
 /.eslintcache
 scratch
+test-results
+
+# Playwright
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
