--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@lblod/ember-acmidm-login": "^2.1.0",
     "@lblod/ember-mock-login": "^0.10.0",
     "@lblod/lib-decision-validation": "^1.0.51",
+    "@playwright/test": "^1.56.1",
     "@release-it-plugins/lerna-changelog": "^6.0.0",
     "@tsconfig/ember": "^2.0.0",
     "@types/ember": "^4.0.3",
@@ -109,6 +110,7 @@
     "ember-source": "~4.12.0",
     "ember-template-lint": "^5.7.2",
     "ember-test-selectors": "^6.0.0",
+    "ember-tooltips": "^4.0.0",
     "ember-truth-helpers": "^4.0.3",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
@@ -134,8 +136,7 @@
     "typescript": "^5.6.2",
     "uuid": "^10.0.0",
     "webpack": "^5.94.0",
-    "webpack-bundle-analyzer": "^4.10.2",
-    "ember-tooltips": "^4.0.0"
+    "webpack-bundle-analyzer": "^4.10.2"
   },
   "engines": {
     "node": "16.* || >= 18"
